spacing fix again

--- a/thelondon_design/css/style_mobile.css
+++ b/thelondon_design/css/style_mobile.css
@@ -48,6 +48,7 @@ figure figcaption {
 	margin: auto;
 	padding-top: 30px;
 	width: 45%;
+	padding-bottom: 25px;
 }
 
 /* applies to thuginitialimg and thuggeneratedimg */
@@ -86,7 +87,7 @@ figure figcaption {
 
 #tbfooter {
 	width: 300px;
-	padding-top: 40px;
+	padding-top: 20px;
 	padding-bottom: 80px;
 	margin: auto;
 }
